<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/first_name"
            android:hint="@string/first_name"
            android:imeOptions="actionDone"
            android:singleLine="true"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/last_name"
            android:hint="@string/last_name"
            android:imeOptions="actionDone"
            android:singleLine="true"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/birth_date"
            android:hint="@string/birth_date"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:editable="false"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/birth_place"
            android:hint="@string/birth_place"
            android:imeOptions="actionDone"
            android:singleLine="true"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/address"
            android:hint="@string/address"
            android:imeOptions="actionDone"
            android:singleLine="true"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/city"
            android:hint="@string/city"
            android:imeOptions="actionDone"
            android:singleLine="true"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/postal_code"
            android:hint="@string/postal_code"
            android:inputType="number"
            android:maxLength="5"
            android:singleLine="true"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radio_group">
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_work"
                android:paddingStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_work"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_goods"
                android:paddingStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_goods"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_care"
                android:paddingStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_care"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_family"
                android:paddingStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_family"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_stuff"
                android:paddingStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_stuff"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_administration"
                android:paddingStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_administration"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_authority"
                android:paddingStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_authority"
                />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/date"
            android:hint="@string/leaving_date"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:editable="false"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:id="@+id/hour"
            android:hint="@string/leaving_time"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:editable="false"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:layout_margin="20dp"
            android:padding="15dp"
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/button_generate"
            />

    </LinearLayout>
</ScrollView>